// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appsForUserTypeAndGroups doesn’t return agency apps if none is specified 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for a group 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for an agency 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps that require an MFA device 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
]
`;

exports[`appsForUserTypeAndGroups returns just the "everyone" category for no groups 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "agencies": Array [
          "BPD",
          "BFD",
          "CH",
        ],
        "description": "",
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "CH",
        ],
        "description": "",
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
]
`;
